# war-dot-io

./: .gitignore  README.md  main.py  saved_model.pb
ImageAlteration/: resizeAndCropImage.py
backend/: .env  Charts.py  Trainer.py  main.py  pyproject.toml  testrun.py  train.py
backend-layer/: main.py
backend-layer/Configuration/: pyproject.toml
backend-layer/DataContext/Entities/: entity.py  img_entity.py
backend-layer/ModelGen/: main.py
backend-layer/Services/: graphservice.py  imageservice.py
backend-layer/Services/DataModels/: model.py
backend/ModelGen/: Trainer.py
backend/constants/: __init__.py  game_list.py  paths.py
backend/model_gen/: __init__.py  main.py  runner.py  trainer.py
backend/model_gen/utils/: __init__.py  image_counter.py
backend/services/: charts.py  graph_service.py
datagen/src/: dataGen.lua  frameDump.lua  runtime.lua  testScript.lua
datagen/src/constants/: paths.lua
datagen/src/tables/: asciiStrings.lua  oamOBJ.lua  spriteArrays.lua
datagen/src/tables/gameText/: gameTable.lua
datagen/src/tables/oam/: junkOamTiles.lua  oamOBJ.lua  (+3 more)
datagen/src/utils/: bytes.lua  detectGame.lua  dispCNT.lua  frameDumper.lua  oam.lua  pathBuilder.lua  vram.lua  writeFile.lua
docs/: reversing.md
models/: pyproject.toml
models/utils/processing/: resizeCrop.py
resources/: WarioWare, Inc. - Mega Microgame$! (USA).sav  desktop.ini
resources/Game_Resources/: desktop.ini
web-layer/App/: angular.json  package-lock.json  package.json
web-layer/App/src/: constants.ts  index.html  styles.scss
web-proj/ClientApp/: package-lock.json
(+10 files in other folders)
