[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["Nick Lay <layns@mail.uc.edu>", "Robbie Davenport <davenpra@mail.uc.edu>", "Garrick Nieberding  <neibergm@mail.uc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
black = "^22.10.0"
opencv-python = "^4.6.0.66"
pillow = "^9.3.0"
flask = "^2.2.3"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"
flask-cors = "^3.0.10"
tensorflow = "2.10"
matplotlib = "^3.7.1"
nvidia-cudnn-cu11 = "8.6.0.163"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
